Added a headind and a paragraph

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h3>Hello</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis odit sequi tempore modi quos illum distinctio ex veniam ducimus fuga eligendi, numquam temporibus dolore odio! Obcaecati ipsa illo provident culpa accusantium placeat officia ut, voluptate laboriosam cumque pariatur ipsum deserunt error doloribus quos praesentium assumenda expedita natus ullam, voluptas debitis?</p>
 </body>
 </html>
